Rename portfolio section to featured work

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -20,7 +20,8 @@
 <app-reference-section [id]="'fun-fact-section'"
     [title]="'Fun Fact'"
     [items]="funFact"></app-reference-section>
-<app-portfolio-section [title]="'Portfolio'"
+<app-portfolio-section [id]="'featured-work-section'"
+    [title]="'Featured Work'"
     [filters]="portfolioFilters"
     [max]="9"></app-portfolio-section>
 <app-blog-section [title]="'Blog'"
