--- a/src/app/components/blog/blog.component.html
+++ b/src/app/components/blog/blog.component.html
@@ -1,4 +1,8 @@
-<app-top-section [image]="'./assets/img/bg-2.jpg'"
-    [title]="'Blog'"></app-top-section>
-<app-blog-section [currentPage]="currentPage"
-    [tagFilter]="tagFilter"></app-blog-section>
+<app-top-section
+  [image]="'./assets/img/bg-2.jpg'"
+  [title]="'Blog'"
+></app-top-section>
+<app-blog-section
+  [currentPage]="currentPage"
+  [tagFilter]="tagFilter"
+></app-blog-section>
