--- a/src/app/components/portfolio/portfolio.component.html
+++ b/src/app/components/portfolio/portfolio.component.html
@@ -1,3 +1,5 @@
-<app-top-section [image]="'./assets/img/bg-2.jpg'"
-    [title]="'Featured Work'"></app-top-section>
+<app-top-section
+  [image]="'./assets/img/bg-2.jpg'"
+  [title]="'Featured Work'"
+></app-top-section>
 <app-portfolio-section></app-portfolio-section>
