--- a/src/app/components/shared/sections/top-section/top-section.component.html
+++ b/src/app/components/shared/sections/top-section/top-section.component.html
@@ -1,6 +1,4 @@
-<div class="site-header top-section
-    image-bg
-    parallax-section"
+<div class="site-header top-section image-bg parallax-section"
     [ngClass]="{'top-section-single': isSingle, 'top-section-home': isHome}"
     [ngStyle]="{'background': 'url(' + image + ')', 'background-position': 'center top', 'background-repeat': 'no-repeat', 'background-size': 'cover'}">
     <div class="overlay-section">
