--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1468,9 +1468,33 @@ ol.ff-roboto-cn li, ul.ff-roboto-cn li{
 	margin: 1%;
 }
 
+.portfolio-content__inner {
+	position: relative;
+  height: 100%;
+  overflow: hidden;
+}
+
+.aspect {
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-bottom: 100%;
+  overflow: hidden;
+}
+.aspect__inner {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+.aspect--4x3 {
+	padding-bottom: 67%;
+}
+
 .portfolio-content img{
 	width: 100%;
-	height: 250px;
+	height: 100%;
 	display: block;
 	position: relative;
 	-webkit-transform: scale(1);
