Add some animation

--- a/src/app/components/shared/sections/about-section/about-section.component.html
+++ b/src/app/components/shared/sections/about-section/about-section.component.html
@@ -3,7 +3,7 @@
     <div class="section-content">
         <div class="container">
             <div class="row">
-                <div class="col s12">
+                <div class="col s12 wow fadeInUp animated">
                     <div class="col s12 w-block shadow-bg pd-0">
                         <div class="col m5 s12 about-img al-center pd-50">
                             <div class="about-img-content image-bg shadow-bg layer"
