--- a/src/app/components/shared/sections/carousel-section/carousel-section.component.html
+++ b/src/app/components/shared/sections/carousel-section/carousel-section.component.html
@@ -4,7 +4,7 @@
             <div class="col s12 section-title">
                 <h2>{{ title }}</h2>
             </div>
-            <div class="col s12 client-wrapper">
+            <div class="col s12 client-wrapper wow fadeIn animated">
                 <div class="col s12 client-carousel w-block shadow-bg pd-0">
 
                     <!-- Single Carousel Item -->
