--- a/src/app/components/shared/sections/portfolio-section/portfolio-section.component.html
+++ b/src/app/components/shared/sections/portfolio-section/portfolio-section.component.html
@@ -19,7 +19,7 @@
                                 (click)="applyFilter(item.filter)">{{ item.name }}</a></li>
                     </ul>
 
-                    <ul class="portfolio-items">
+                    <ul class="portfolio-items wow fadeInUp animated">
 
                         <!-- Single Portfolio -->
                         <ng-container *ngFor="let project of projects; let i = index">
