--- a/src/app/components/shared/sections/skill-section/skill-section.component.html
+++ b/src/app/components/shared/sections/skill-section/skill-section.component.html
@@ -18,8 +18,8 @@
                                     <p class="progress-text">{{ skill.name }}<span>{{ skill.progress }}%</span>
                                     </p>
                                     <div class="progress-bar">
-                                        <span
-                                            [ngStyle]="{'transition': 'width 1.5s ease 0s', 'width': skill.progress + '%'}"></span>
+                                        <span class="wow slideInLeft animated"
+                                            [ngStyle]="{'width': skill.progress + '%'}"></span>
                                     </div>
                                 </div>
                             </ng-container>
@@ -39,8 +39,8 @@
                                     <p class="progress-text">{{ skill.name }}<span>{{ skill.progress }}%</span>
                                     </p>
                                     <div class="progress-bar">
-                                        <span
-                                            [ngStyle]="{'transition': 'width 1.5s ease 0s', 'width': skill.progress + '%'}"></span>
+                                        <span class="wow slideInLeft animated"
+                                            [ngStyle]="{'width': skill.progress + '%'}"></span>
                                     </div>
                                 </div>
                             </ng-container>
