Init wow animation after disabling the preloader (not before)
+ Change portfolio items animation to zoomIn

--- a/src/app/components/shared/sections/portfolio-section/portfolio-section.component.html
+++ b/src/app/components/shared/sections/portfolio-section/portfolio-section.component.html
@@ -19,11 +19,11 @@
                                 (click)="applyFilter(item.filter)">{{ item.name }}</a></li>
                     </ul>
 
-                    <ul class="portfolio-items wow fadeInUp animated">
+                    <ul class="portfolio-items">
 
                         <!-- Single Portfolio -->
                         <ng-container *ngFor="let project of projects; let i = index">
-                            <li class="portfolio-content shadow-bg"
+                            <li class="portfolio-content shadow-bg wow zoomIn animated"
                                 attr.data-groups="{{ project.group.join(',') }}">
                                 <figure class="portfolio-content__inner">
                                     <div class="aspect aspect--4x3">
