--- a/src/app/components/shared/sections/reference-section/reference-section.component.html
+++ b/src/app/components/shared/sections/reference-section/reference-section.component.html
@@ -6,7 +6,7 @@
                 <h2>{{ title }}</h2>
             </div>
             <div class="col s12">
-                <div class="reference-wrapper col s12 w-block shadow-bg wow fadeIn animated">
+                <div class="reference-wrapper col s12 w-block shadow-bg wow fadeInRight animated">
                     <div class="reference-carousel">
 
                         <!-- Single Reference Item -->
