--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -31,11 +31,11 @@
   [title]="'Experience'"
   [items]="experience"
 ></app-timeline-section> -->
-<app-reference-section
+<!-- <app-reference-section
   [id]="'fun-fact-section'"
   [title]="'Fun Fact'"
   [items]="funFact"
-></app-reference-section>
+></app-reference-section> -->
 <app-portfolio-section
   [id]="'featured-work-section'"
   [title]="'Featured Work'"
