Update portfolio section animation

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -40,6 +40,7 @@
   [id]="'featured-work-section'"
   [title]="'Featured Work'"
   [max]="9"
+  [animation]="'fadeInUp'"
 ></app-portfolio-section>
 <app-blog-section
   [title]="'Blog'"
