--- a/src/app/components/shared/sections/portfolio-section/portfolio-section.component.html
+++ b/src/app/components/shared/sections/portfolio-section/portfolio-section.component.html
@@ -25,7 +25,7 @@
                         <ng-container *ngFor="let project of projects; let i = index">
                             <li class="portfolio-content"
                                 attr.data-groups="{{ project.group.join(',') }}">
-                                <figure class="portfolio-content__inner shadow-bg wow jackInTheBox animated">
+                                <figure class="portfolio-content__inner shadow-bg wow animated" [ngClass]="animation">
                                     <div class="aspect aspect--4x3">
                                         <div class="aspect__inner">
                                             <img src="{{ project.image }}" alt="{{ project.name }}" />
