--- a/src/app/components/shared/sections/about-section/about-section.component.html
+++ b/src/app/components/shared/sections/about-section/about-section.component.html
@@ -20,9 +20,14 @@
                                     <p [innerHTML]="author.bio"></p>
                                     <div><span>Age</span>{{ author.age }}</div>
                                     <div><span>Location</span>{{ author.location }}</div>
-                                    <div><span>Email</span><a href="mailto:{{ author.email }}">{{ author.email }}</a>
+                                    <div>
+                                        <span>Email</span>
+                                        <a href="mailto:{{ author.email }}">{{ author.email }}</a>
+                                        <span class="fa fa-info-circle" title="i might be slow to respond"></span>
                                     </div>
-                                    <div><span>Website</span><a href="{{ author.website }}">{{ author.website }}</a>
+                                    <div>
+                                        <span>Website</span>
+                                        <a href="{{ author.website }}">{{ author.website }}</a>
                                     </div>
                                 </div>
                             </div>
