Use tooltip for email tip
instead of title property

--- a/src/app/components/shared/sections/about-section/about-section.component.html
+++ b/src/app/components/shared/sections/about-section/about-section.component.html
@@ -23,7 +23,7 @@
                                     <div>
                                         <span>Email</span>
                                         <a href="mailto:{{ author.email }}">{{ author.email }}</a>
-                                        <span class="fa fa-info-circle" title="i might be slow to respond"></span>
+                                        <span class="fa fa-info-circle tooltipped" data-position="top" data-delay="50" data-tooltip="I might be slow to respond"></span>
                                     </div>
                                     <div>
                                         <span>Website</span>
