--- a/src/assets/css/color.scss
+++ b/src/assets/css/color.scss
@@ -57,6 +57,7 @@ $base-color: #337ab7;
 .main-nav a:hover,
 .about-data a,
 .about-data a:hover,
+.about-data span.fa-info-circle,
 .timeline-desc a,
 .timeline-desc a:hover,
 .about-social a:hover,
