--- a/src/app/components/shared/sections/portfolio-section/portfolio-section.component.html
+++ b/src/app/components/shared/sections/portfolio-section/portfolio-section.component.html
@@ -52,7 +52,7 @@
                                                 <a class="btn-circle waves-effect tooltipped"
                                                     data-position="top"
                                                     data-delay="50"
-                                                    data-tooltip="View Source"
+                                                    data-tooltip="View Project"
                                                     href="{{ project.link }}"
                                                     target="_blank"><span class="fa fa-link"></span></a>
                                             </div>
