Hide skills section
the good at section should be enough

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -4,13 +4,14 @@
 ></app-top-section>
 <app-about-section></app-about-section>
 <app-service-section
+  [id]="'good-at-section'"
   [title]="'I Am Good At'"
   [services]="services"
 ></app-service-section>
-<app-skill-section
+<!-- <app-skill-section
   [title]="'Skills'"
   [skills]="skills"
-></app-skill-section>
+></app-skill-section> -->
 <!-- <app-carousel-section
   [id]="'tools-section'"
   [title]="'Tools'"
