--- a/src/app/components/shared/sections/service-section/service-section.component.html
+++ b/src/app/components/shared/sections/service-section/service-section.component.html
@@ -1,4 +1,4 @@
-<section id="service-section"
+<section [id]="id"
     class="service-section">
     <div class="container">
         <div class="row">
