Replaced interpolation with one-way binding
+ Removed useless bindings

--- a/src/app/components/page-not-found/page-not-found.component.html
+++ b/src/app/components/page-not-found/page-not-found.component.html
@@ -1,6 +1,6 @@
 <app-top-section
-  [image]="'./assets/img/bg-2.jpg'"
-  [title]="'404'"
+  image="./assets/img/bg-2.jpg"
+  title="404"
   [isSingle]="true"
 ></app-top-section>
-<app-error-section [message]="'Page not found'"></app-error-section>
+<app-error-section message="Page not found"></app-error-section>
