--- a/src/app/components/shared/sections/top-section/top-section.component.html
+++ b/src/app/components/shared/sections/top-section/top-section.component.html
@@ -13,7 +13,7 @@
     </div>
 
     <a *ngIf="repositoryLink"
-        href="{{ repositoryLink }}"
+        [href]="repositoryLink"
         target="_blank"
         class="github-corner"><svg width="80"
             height="80"
