--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,49 +1,49 @@
 <app-top-section
-  [image]="'./assets/img/bg-1.jpg'"
+  image="./assets/img/bg-1.jpg"
   [isHome]="true"
 ></app-top-section>
 <app-about-section></app-about-section>
 <app-service-section
-  [id]="'good-at-section'"
-  [title]="'I Am Good At'"
+  id="good-at-section"
+  title="I Am Good At"
   [services]="services"
 ></app-service-section>
 <!-- <app-skill-section
-  [title]="'Skills'"
+  title="Skills"
   [skills]="skills"
 ></app-skill-section> -->
 <!-- <app-carousel-section
-  [id]="'tools-section'"
-  [title]="'Tools'"
+  id="tools-section"
+  title="Tools"
   [items]="tools"
 ></app-carousel-section> -->
 <app-carousel-section
-  [id]="'technologies-section'"
-  [title]="'Technologies'"
+  id="technologies-section"
+  title="Technologies"
   [items]="technologies"
 ></app-carousel-section>
 <app-timeline-section
-  [id]="'education-section'"
-  [title]="'Education'"
+  id="education-section"
+  title="Education"
   [items]="education"
 ></app-timeline-section>
 <!-- <app-timeline-section
-  [id]="'experience-section'"
-  [title]="'Experience'"
+  id="experience-section"
+  title="Experience"
   [items]="experience"
 ></app-timeline-section> -->
 <!-- <app-reference-section
-  [id]="'fun-fact-section'"
-  [title]="'Fun Fact'"
+  id="fun-fact-section"
+  title="Fun Fact"
   [items]="funFact"
 ></app-reference-section> -->
 <app-portfolio-section
-  [id]="'featured-work-section'"
-  [title]="'Featured Work'"
+  id="featured-work-section"
+  title="Featured Work"
   [max]="9"
-  [animation]="'fadeInUp'"
+  animation="fadeInUp"
 ></app-portfolio-section>
 <app-blog-section
-  [title]="'Blog'"
+  title="Blog"
   [maxPosts]="4"
 ></app-blog-section>
