--- a/src/app/components/shared/sections/blog-section/blog-section.component.html
+++ b/src/app/components/shared/sections/blog-section/blog-section.component.html
@@ -21,25 +21,25 @@
                         </div>
                         <div class="col s12 blog-desc pd-30">
                             <div class="blog-title">
-                                <a routerLink="{{ post.link }}">{{ post.title }}</a>
+                                <a [routerLink]="post.link">{{ post.title }}</a>
                             </div>
                             <div class="blog-data">
                                 <div class="chip mgr-10">
-                                    <img src="{{ post.author.image }}"
+                                    <img [src]="post.author.image"
                                         alt="Author">
                                     {{ post.author.name }}
                                 </div>
                                 <div class="chip">
                                     <span class="fa fa-comments mgr-5"></span>
                                     <span class="disqus-comment-count"
-                                        attr.data-disqus-identifier="{{ post.disqusIdentifier }}">0 Comments</span>
+                                        [attr.data-disqus-identifier]="post.disqusIdentifier">0 Comments</span>
                                 </div>
                             </div>
                             <div class="blog-content">
                                 <p [innerHTML]="post.text"></p>
                             </div>
                             <div class="blog-more">
-                                <a routerLink="{{ post.link }}"
+                                <a [routerLink]="post.link"
                                     class="btn-custom waves-effect mgt-10 mgb-10">Read More</a>
                             </div>
                         </div>
@@ -58,18 +58,19 @@
                 class="col s12">
                 <div class="col s12 pagination mgt-60">
                     <a class="prev page-numbers btn-circle waves-effect waves-light"
-                        routerLink="{{ paginationRoute }}/1"><span class="fa fa-angle-double-left"></span></a>
+                        [routerLink]="paginationRoute + '/1'"><span class="fa fa-angle-double-left"></span></a>
                     <ng-container *ngFor="let page of pages">
                         <span *ngIf="page == currentPage"
                             aria-current="page"
                             class="page-numbers current btn-circle waves-effect waves-light">{{ page }}</span>
                         <a *ngIf="page != currentPage"
                             class="page-numbers btn-circle waves-effect waves-light"
-                            routerLink="{{ paginationRoute + page }}">{{ page }}</a>
+                            [routerLink]="paginationRoute + page">{{ page }}</a>
                     </ng-container>
                     <a class="next page-numbers btn-circle waves-effect waves-light"
-                        routerLink="{{ paginationRoute + pages.length }}"><span
-                            class="fa fa-angle-double-right"></span></a>
+                        [routerLink]="paginationRoute + pages.length">
+                        <span class="fa fa-angle-double-right"></span>
+                    </a>
                 </div>
             </div>
         </div>
