--- a/src/app/components/shared/sections/reference-section/reference-section.component.html
+++ b/src/app/components/shared/sections/reference-section/reference-section.component.html
@@ -1,5 +1,5 @@
 <!-- Reference Section -->
-<section id="{{ id }}" class="reference-section">
+<section [id]="id" class="reference-section">
     <div class="container">
         <div class="row">
             <div class="col s12 section-title">
@@ -15,7 +15,7 @@
                                 <ng-template carouselSlide>
                                         <div class="item">
                                             <div *ngIf="item.image" class="reference-img">
-                                                <img src="{{ item.image }}" alt="{{ item.title }}">
+                                                <img [src]="item.image" [alt]="item.title">
                                             </div>
                                             <div class="reference-author">
                                                 {{ item.title }}
