--- a/src/app/components/shared/sections/timeline-section/timeline-section.component.html
+++ b/src/app/components/shared/sections/timeline-section/timeline-section.component.html
@@ -1,4 +1,4 @@
-<section id="{{ id }}">
+<section [id]="id">
     <div class="container">
         <div class="row">
             <div class="col s12 section-title">
