--- a/src/app/components/shared/sections/about-section/about-section.component.html
+++ b/src/app/components/shared/sections/about-section/about-section.component.html
@@ -37,9 +37,11 @@
                             </div>
                         </div>
                         <div class="about-social col s12 pd-0">
-                            <a *ngFor="let social of socials"
-                                class="waves-effect waves-light"
-                                [href]="social.link"><span class="fa fa-{{ social.icon }}"></span></a>
+                            <ng-container *ngFor="let social of socials">
+                                <a *ngIf="social.link && social.link.length" class="waves-effect waves-light" [href]="social.link">
+                                    <span class="fa fa-{{ social.icon }}"></span>
+                                </a>
+                            </ng-container>
                         </div>
                     </div>
                 </div>
