Update syntax highlighting theme
+ Add line numbers

--- a/src/app/components/shared/sections/post-section/post-section.component.html
+++ b/src/app/components/shared/sections/post-section/post-section.component.html
@@ -25,7 +25,7 @@
                             </div>
                         </div>
                         <div class="single-blog-content">
-                            <markdown [src]="post.content"></markdown>
+                            <markdown [src]="post.content" lineNumbers></markdown>
                         </div>
 
                         <div class="single-blog-taxonomy">
