--- a/src/app/components/shared/sections/blog-section/blog-section.component.html
+++ b/src/app/components/shared/sections/blog-section/blog-section.component.html
@@ -21,7 +21,7 @@
                         </div>
                         <div class="col s12 blog-desc pd-30">
                             <div class="blog-title">
-                                <a [routerLink]="post.link">{{ post.title }}</a>
+                                <a [routerLink]="post.link" [title]="post.title">{{ post.title }}</a>
                             </div>
                             <div class="blog-data">
                                 <div class="chip mgr-10">
