--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -5,45 +5,45 @@
 <app-about-section></app-about-section>
 <app-service-section
   id="good-at-section"
-  title="I Am Good At"
+  [title]="'I Am Good At'"
   [services]="services"
 ></app-service-section>
 <!-- <app-skill-section
-  title="Skills"
+  [title]="'Skills'"
   [skills]="skills"
 ></app-skill-section> -->
 <!-- <app-carousel-section
   id="tools-section"
-  title="Tools"
+  [title]="'Tools'"
   [items]="tools"
 ></app-carousel-section> -->
 <app-carousel-section
   id="technologies-section"
-  title="Technologies"
+  [title]="'Technologies'"
   [items]="technologies"
 ></app-carousel-section>
 <app-timeline-section
   id="education-section"
-  title="Education"
+  [title]="'Education'"
   [items]="education"
 ></app-timeline-section>
 <!-- <app-timeline-section
   id="experience-section"
-  title="Experience"
+  [title]="'Experience'"
   [items]="experience"
 ></app-timeline-section> -->
 <!-- <app-reference-section
   id="fun-fact-section"
-  title="Fun Fact"
+  [title]="'Fun Fact'"
   [items]="funFact"
 ></app-reference-section> -->
 <app-portfolio-section
   id="featured-work-section"
-  title="Featured Work"
+  [title]="'Featured Work'"
   [max]="9"
   animation="fadeInUp"
 ></app-portfolio-section>
 <app-blog-section
-  title="Blog"
+  [title]="'Blog'"
   [maxPosts]="3"
 ></app-blog-section>
