--- a/src/app/components/shared/sections/about-section/about-section.component.html
+++ b/src/app/components/shared/sections/about-section/about-section.component.html
@@ -8,7 +8,8 @@
                         <div class="col m5 s12 about-img al-center pd-50">
                             <div class="about-img-content image-bg shadow-bg layer"
                                 data-depth="0.1"
-                                [ngStyle]="{'background': 'url(' + author.image + ')', 'background-position': 'center top', 'background-repeat': 'no-repeat', 'background-size': 'cover'}">
+                                [ngStyle]="{'background-image': 'url(' + image.path + ')'}"
+                                (click)="nextImage()">
                             </div>
                             <div class="about-name">{{ author.name }}</div>
                             <div class="about-title">{{ author.job }}</div>
