--- a/src/app/components/shared/sections/about-section/about-section.component.html
+++ b/src/app/components/shared/sections/about-section/about-section.component.html
@@ -23,12 +23,7 @@
                                     <div><span>Location</span>{{ author.location }}</div>
                                     <div>
                                         <span>Email</span>
-                                        <a href="mailto:{{ author.email }}"
-                                           class="tooltipped"
-                                           data-position="bottom"
-                                           data-delay="50"
-                                           data-tooltip="I might be slow to respond"
-                                        >{{ author.email }}</a>
+                                        <a href="mailto:{{ author.email }}">{{ author.email }}</a>
                                     </div>
                                     <div>
                                         <span>Website</span>
